Make navbar-2 a fixed navigation bar and add nav-spacing to give some spacing from the navbar and the content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -364,6 +364,11 @@ table th {
   color: #9c8300 !important;
 }
 
+.nav-spacing {
+  width: 100%;
+  height: 100px;
+}
+
 /* Footer Section */
 
 .footer-links a {
